--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Dependencies
 node_modules
 .pnp
 .pnp.js
+.vscode
 
 # Local env files
 .env
